--- a/README.textile
+++ b/README.textile
@@ -308,7 +308,40 @@ end
 
 Note: By default if using/overriding the Generic strategy, the #generic? config attribute is set to true, which has the effect of adding an attr_accessor _:trole_ or _:troles_ to the role subject. To avoid this when implementing you own, non-generic role strategy set, please set this config:
 
-@User.troles_config.generic = false@
+@User.troles_config.generic = false@   
+
+<pre>
+module Troles::Common
+  class Config
+
+    # override this in your custom adapter to fx use a special data store macro field
+    # such as #field for Mongoid or #property for Data Store or none for ActiveRecord
+    def configure_role_field options = {}
+      clazz.send(:attr_accessor, clazz.role_field) if generic? # create troles accessor      
+    end       
+      
+    def generic?
+      @generic.nil? ? true : @generic
+    end  
+</pre>
+
+Change to sth like this for Mongoid:
+<pre>
+  def configure_role_field options = {}
+    type = case options[:type]
+    when :bit
+      Boolean
+    when :string
+     String
+    ... 
+    end
+    clazz.send(:field, clazz.role_field, type)      
+  end         
+</pre>
+
+Then call it like this from the strategy module: @configure_role_field(:type => :string)@ 
+
+Note: This config patternt needs more consideration and is bound to change and be improved further!
 
 <pre>
   module EncryptedStringMany
@@ -318,6 +351,7 @@ Note: By default if using/overriding the Generic strategy, the #generic? config 
     def self.included(base)
       base.send :include, BaseMany
       base.send :include, InstanceMethods
+      base.troles_config.configure_role_field # configure use of generic attr_accessor by default       
     end  
 </pre>
 
